Hang man...yay..

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   <div id="container">
     <img id="hangman" src="images/Hangman-0.png"/>
-    <div id="word"></div>
+    <div id="word">___
+    </div>
   </div>
 </body>
 </html>
