nedd to fix everything

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <script src="https://code.jquery.com/jquery-2.2.4.js" ></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" href="https://previews.123rf.com/images/pixelrobot/pixelrobot1504/pixelrobot150401481/38286143-Old-West-Hang-Mans-Noose-Isolated-on-White-Background--Stock-Photo.jpg">
   <script src="script.js" ></script>
   <title>Hangman</title>
 </head>
